# aruco_ros

./: README.md
aruco/include/aruco/: markerdetector.h
aruco/src/aruco/: markerdetector.cpp
aruco_ros/: CMakeLists.txt
aruco_ros/launch/: quad.launch
aruco_ros/src/: aruco_ros_utils.cpp  simple_quadruple.cpp
